docs/api/qiskit/0.19/qiskit.providers.aer.AerProvider.mdx
---
title: AerProvider (v0.19)
description: API reference for qiskit.providers.aer.AerProvider in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.AerProvider
---

# AerProvider

<Class id="qiskit.providers.aer.AerProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/aerprovider.py" signature="AerProvider(*args, **kwargs)" modifiers="class">
  Provider for Qiskit Aer backends.

  ## Methods

  <span id="aerprovider-backends" />

  ### backends

  <Function id="qiskit.providers.aer.AerProvider.backends" signature="AerProvider.backends(name=None, filters=None, **kwargs)">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[[BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")]
  </Function>

  <span id="aerprovider-get-backend" />

  ### get\_backend

  <Function id="qiskit.providers.aer.AerProvider.get_backend" signature="AerProvider.get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")

    **Raises**

    [**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>
</Class>

