docs/api/qiskit/0.24/qiskit.providers.aer.AerProvider.mdx
---
title: AerProvider
description: API reference for qiskit.providers.aer.AerProvider
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.AerProvider
---

<span id="qiskit-providers-aer-aerprovider" />

# qiskit.providers.aer.AerProvider

<Class id="qiskit.providers.aer.AerProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.7/qiskit/providers/aer/aerprovider.py" signature="AerProvider(*args, **kwargs)">
  Provider for Qiskit Aer backends.

  ### \_\_init\_\_

  <Function id="qiskit.providers.aer.AerProvider.__init__" name="__init__" signature="__init__(*args, **kwargs)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                          |                                                             |
  | ------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------- |
  | [`__init__`](#qiskit.providers.aer.AerProvider.__init__ "qiskit.providers.aer.AerProvider.__init__")(\*args, \*\*kwargs) | Initialize self.                                            |
  | [`backends`](#qiskit.providers.aer.AerProvider.backends "qiskit.providers.aer.AerProvider.backends")(\[name, filters])   | Return a list of backends matching the specified filtering. |
  | [`get_backend`](#qiskit.providers.aer.AerProvider.get_backend "qiskit.providers.aer.AerProvider.get_backend")(\[name])   | Return a single backend matching the specified filtering.   |

  ### backends

  <Function id="qiskit.providers.aer.AerProvider.backends" name="backends" signature="backends(name=None, filters=None, **kwargs)">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[[BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")]
  </Function>

  ### get\_backend

  <Function id="qiskit.providers.aer.AerProvider.get_backend" name="get_backend" signature="get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")

    **Raises**

    [**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>
</Class>

